--- a/src/app/mosh-github-followers/mosh-github-followers.component.html
+++ b/src/app/mosh-github-followers/mosh-github-followers.component.html
@@ -21,6 +21,6 @@
           {{ follower.login }} 
         </a>
       </h4>
-      <a href="follower.html_url">{{ follower.html_url }}</a>
+      <a href="#">{{ follower.html_url }}</a>
     </div>
 </div>
