--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" [style.backgroundColor]="backgroundColor" >
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="nav navbar-nav">
       <li routerLinkActive="nav-item active current">
